--- a/index.html
+++ b/index.html
@@ -1,25 +1,55 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Example</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <title>Example</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `script` tags-->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body class="container-fluid">
-      <h1>Example</h1>
+  <!-- Do not add `link` tags-->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
-    </body>
+  <!-- Do not add `script` tags-->
+  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
+
+<body class="container-fluid">
+  <h1>Example</h1>
+
+  <div class="row">
+    <div class="col-xs-2">empty column</div>
+    <div class="col-xs-8">
+      <div class="row top">
+        <div class="col-xs-4">upLeft</div>
+        <div class="col-xs-4 cent">upCent</div>
+        <div class="col-xs-4">upRight</div>
+      </div>
+    </div>
+    <div class="col-xs-2"></div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-2"></div>
+    <div class="col-xs-8">
+      <div class="row mid">
+        <div class="col-xs-4"><div class="box">box</div></div>
+        <div class="col-xs-4 cent">midCent</div>
+        <div class="col-xs-4">midRight</div>
+      </div>
+    </div>
+    <div class="col-xs-2"></div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-2"></div>
+    <div class="col-xs-8">
+      <div class="row bottom">
+        <div class="col-xs-4">botLeft</div>
+        <div class="col-xs-4 cent">botCent</div>
+        <div class="col-xs-4">botRight</div>
+      </div>
+    </div>
+    <div class="col-xs-2">empty column</div>
+  </div>
+
 </html>
