Add game logic and DOM manipulation
Now there is one function that updates the gameBoard js object and shows
selection on the screen.
A second function (gameOver) checks if all values in the gameBoard
object are non-empty strings

A little feedback on the right-hand side

--- a/index.html
+++ b/index.html
@@ -14,42 +14,48 @@
 </head>
 
 <body class="container-fluid">
-  <h1>Example</h1>
 
-  <div class="row">
-    <div class="col-xs-2">empty column</div>
-    <div class="col-xs-8">
-      <div class="row top">
-        <div class="col-xs-4">upLeft</div>
-        <div class="col-xs-4 cent">upCent</div>
-        <div class="col-xs-4">upRight</div>
-      </div>
-    </div>
-    <div class="col-xs-2"></div>
-  </div>
+  <h1>Tickity Tackity Toe</h1>
 
-  <div class="row">
-    <div class="col-xs-2"></div>
-    <div class="col-xs-8">
-      <div class="row mid">
-        <div class="col-xs-4"><div class="box">box</div></div>
-        <div class="col-xs-4 cent">midCent</div>
-        <div class="col-xs-4">midRight</div>
-      </div>
-    </div>
-    <div class="col-xs-2"></div>
-  </div>
+  <div class="container">
 
-  <div class="row">
-    <div class="col-xs-2"></div>
-    <div class="col-xs-8">
-      <div class="row bottom">
-        <div class="col-xs-4">botLeft</div>
-        <div class="col-xs-4 cent">botCent</div>
-        <div class="col-xs-4">botRight</div>
+    <div class="row">
+      <div class="col-xs-2">some buttons here</div>
+      <div class="col-xs-8">
+        <div class="row top">
+          <div class="col-xs-4" id="upLeft"></div>
+          <div class="col-xs-4 cent" id="upCent"></div>
+          <div class="col-xs-4" id="upRight"></div>
+        </div>
       </div>
+      <div class="col-xs-2" id="feedback">feedback here? such as "choose blank space" or "x wins!"</div>
     </div>
-    <div class="col-xs-2">empty column</div>
+
+    <div class="row">
+      <div class="col-xs-2"></div>
+      <div class="col-xs-8">
+        <div class="row mid">
+          <div class="col-xs-4" id="midLeft"></div>
+          <div class="col-xs-4 cent" id="midCent"></div>
+          <div class="col-xs-4" id="midRight"></div>
+        </div>
+      </div>
+      <div class="col-xs-2"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-2"></div>
+      <div class="col-xs-8">
+        <div class="row bottom">
+          <div class="col-xs-4" id="botLeft"></div>
+          <div class="col-xs-4 cent" id="botCent"></div>
+          <div class="col-xs-4" id="botRight"></div>
+        </div>
+      </div>
+      <div class="col-xs-2"></div>
+    </div>
+
+
   </div>
 
 </html>
