Add game logic for winning
and a whole lot of other stuff....

--- a/index.html
+++ b/index.html
@@ -23,9 +23,24 @@
       <div class="col-xs-2">some buttons here</div>
       <div class="col-xs-8">
         <div class="row top">
-          <div class="col-xs-4" id="upLeft"></div>
-          <div class="col-xs-4 cent" id="upCent"></div>
-          <div class="col-xs-4" id="upRight"></div>
+          <div class="col-xs-4" id="upLeft">
+            <div class="x">X</div>
+            <div class="o">O</div>
+            <div class="hover-x">X</div>
+            <div class="hover-o">O</div>
+          </div>
+          <div class="col-xs-4 cent" id="upCent">
+            <div class="x">X</div>
+            <div class="o">O</div>
+            <div class="hover-x">X</div>
+            <div class="hover-o">O</div>
+          </div>
+          <div class="col-xs-4" id="upRight">
+            <div class="x">X</div>
+            <div class="o">O</div>
+            <div class="hover-x">X</div>
+            <div class="hover-o">O</div>
+          </div>
         </div>
       </div>
       <div class="col-xs-2" id="feedback">feedback here? such as "choose blank space" or "x wins!"</div>
@@ -35,9 +50,24 @@
       <div class="col-xs-2"></div>
       <div class="col-xs-8">
         <div class="row mid">
-          <div class="col-xs-4" id="midLeft"></div>
-          <div class="col-xs-4 cent" id="midCent"></div>
-          <div class="col-xs-4" id="midRight"></div>
+          <div class="col-xs-4" id="midLeft">
+            <div class="x">X</div>
+            <div class="o">O</div>
+            <div class="hover-x">X</div>
+            <div class="hover-o">O</div>
+          </div>
+          <div class="col-xs-4 cent" id="midCent">
+            <div class="x">X</div>
+            <div class="o">O</div>
+            <div class="hover-x">X</div>
+            <div class="hover-o">O</div>
+          </div>
+          <div class="col-xs-4" id="midRight">
+            <div class="x">X</div>
+            <div class="o">O</div>
+            <div class="hover-x">X</div>
+            <div class="hover-o">O</div>
+          </div>
         </div>
       </div>
       <div class="col-xs-2"></div>
@@ -47,9 +77,24 @@
       <div class="col-xs-2"></div>
       <div class="col-xs-8">
         <div class="row bottom">
-          <div class="col-xs-4" id="botLeft"></div>
-          <div class="col-xs-4 cent" id="botCent"></div>
-          <div class="col-xs-4" id="botRight"></div>
+          <div class="col-xs-4" id="botLeft">
+            <div class="x">X</div>
+            <div class="o">O</div>
+            <div class="hover-x">X</div>
+            <div class="hover-o">O</div>
+          </div>
+          <div class="col-xs-4 cent" id="botCent">
+            <div class="x">X</div>
+            <div class="o">O</div>
+            <div class="hover-x">X</div>
+            <div class="hover-o">O</div>
+          </div>
+          <div class="col-xs-4" id="botRight">
+            <div class="x">X</div>
+            <div class="o">O</div>
+            <div class="hover-x">X</div>
+            <div class="hover-o">O</div>
+          </div>
         </div>
       </div>
       <div class="col-xs-2"></div>
