Move all js into new file
JS events and object moved to events.js so index.js is clean

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-xs-2">some buttons here</div>
+      <div class="col-xs-2"></div> <!-- left column, good place for buttons -->
       <div class="col-xs-8">
         <div class="row top">
           <div class="col-xs-4" id="upLeft">
@@ -43,7 +43,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-2" id="feedback">feedback here? such as "choose blank space" or "x wins!"</div>
+      <div class="col-xs-2" id="feedback"></div> <!-- right column, where feedback lives -->
     </div>
 
     <div class="row">
