Get sign-up working
Get sign-up working

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Example</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Do not add `link` tags-->
@@ -16,6 +17,8 @@
 <body class="container-fluid">
 
   <h1>Tickity Tackity Toe</h1>
+  <button type="submit" id="sign-up">button stuff </button>
+
 
   <div class="container">
 
@@ -61,6 +64,7 @@
             <div class="o">O</div>
             <div class="hover-x">X</div>
             <div class="hover-o">O</div>
+            <div class="modal"> MODAL GOES HERE </div> <!-- MODAL ON TOP! -->
           </div>
           <div class="col-xs-4" id="midRight">
             <div class="x">X</div>
