Create working sign up form
Create working sign up form, refactored code

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
 <body class="container-fluid">
 
   <h1>Tickity Tackity Toe</h1>
-  <button type="submit" id="sign-up">button stuff </button>
 
+  <form id="sign-up">
+    <input name="credentials[email]" type="text" value="an@example.email">
+    <input name="credentials[password]" type="text" value="an example password">
+    <input type="submit" value="Sign Up!">
+  </form>
 
   <div class="container">
 
