--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     <input type="submit" value="Sign Up!">
   </form>
 
+  <form id="sign-in">
+    <input name="credentials[email]" type="text" value="an@example.email">
+    <input name="credentials[password]" type="text" value="an example password">
+    <input type="submit" value="Sign In!">
+  </form>
+
+  <form id="sign-out">
+    <input type="submit" value="Sign Out!">
+  </form>
+
   <div class="container">
 
     <div class="row">
