--- a/index.html
+++ b/index.html
@@ -19,19 +19,25 @@
   <h1>Tickity Tackity Toe</h1>
 
   <form id="sign-up">
-    <input name="credentials[email]" type="text" value="an@example.email">
-    <input name="credentials[password]" type="text" value="an example password">
+    <input name="credentials[email]" type="text" placeholder="an@example.email">
+    <input name="credentials[password]" type="text" placeholder="an example password">
     <input type="submit" value="Sign Up!">
   </form>
 
   <form id="sign-in">
-    <input name="credentials[email]" type="text" value="an@example.email">
-    <input name="credentials[password]" type="text" value="an example password">
+    <input name="credentials[email]" type="text" placeholder="an@example.email">
+    <input name="credentials[password]" type="text" placeholder="an example password">
     <input type="submit" value="Sign In!">
   </form>
 
   <form id="sign-out">
     <input type="submit" value="Sign Out!">
+  </form>
+
+  <form id="change-pw">
+    <input name="passwords[old]" type="text" placeholder="an example password">
+    <input name="passwords[new]" type="text" placeholder="an example password">
+    <input type="submit" value="Change password">
   </form>
 
   <div class="container">
