Create working create game button
Create working create game button

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
     <input type="submit" value="Change password">
   </form>
 
+  <form id="create-game">
+    <input type="submit" value="Create Game">
+  </form>
+
   <div class="container">
 
     <div class="row">
