Create working curl update
Create working curl update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Example</title>
+  <title>Tickity Tackity Toe</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -50,19 +50,19 @@
       <div class="col-xs-2"></div> <!-- left column, good place for buttons -->
       <div class="col-xs-8">
         <div class="row top">
-          <div class="col-xs-4" id="upLeft">
+          <div class="col-xs-4" id="upLeft" data-cell-index='0'>
             <div class="x">X</div>
             <div class="o">O</div>
             <div class="hover-x">X</div>
             <div class="hover-o">O</div>
           </div>
-          <div class="col-xs-4 cent" id="upCent">
+          <div class="col-xs-4 cent" id="upCent" data-cell-index='1'>
             <div class="x">X</div>
             <div class="o">O</div>
             <div class="hover-x">X</div>
             <div class="hover-o">O</div>
           </div>
-          <div class="col-xs-4" id="upRight">
+          <div class="col-xs-4" id="upRight" data-cell-index='2'>
             <div class="x">X</div>
             <div class="o">O</div>
             <div class="hover-x">X</div>
@@ -77,20 +77,20 @@
       <div class="col-xs-2"></div>
       <div class="col-xs-8">
         <div class="row mid">
-          <div class="col-xs-4" id="midLeft">
+          <div class="col-xs-4" id="midLeft" data-cell-index='3'>
             <div class="x">X</div>
             <div class="o">O</div>
             <div class="hover-x">X</div>
             <div class="hover-o">O</div>
           </div>
-          <div class="col-xs-4 cent" id="midCent">
+          <div class="col-xs-4 cent" id="midCent" data-cell-index='4'>
             <div class="x">X</div>
             <div class="o">O</div>
             <div class="hover-x">X</div>
             <div class="hover-o">O</div>
             <div class="modal"> MODAL GOES HERE </div> <!-- MODAL ON TOP! -->
           </div>
-          <div class="col-xs-4" id="midRight">
+          <div class="col-xs-4" id="midRight" data-cell-index='5'>
             <div class="x">X</div>
             <div class="o">O</div>
             <div class="hover-x">X</div>
@@ -105,19 +105,19 @@
       <div class="col-xs-2"></div>
       <div class="col-xs-8">
         <div class="row bottom">
-          <div class="col-xs-4" id="botLeft">
+          <div class="col-xs-4" id="botLeft" data-cell-index='6'>
             <div class="x">X</div>
             <div class="o">O</div>
             <div class="hover-x">X</div>
             <div class="hover-o">O</div>
           </div>
-          <div class="col-xs-4 cent" id="botCent">
+          <div class="col-xs-4 cent" id="botCent" data-cell-index='7'>
             <div class="x">X</div>
             <div class="o">O</div>
             <div class="hover-x">X</div>
             <div class="hover-o">O</div>
           </div>
-          <div class="col-xs-4" id="botRight">
+          <div class="col-xs-4" id="botRight" data-cell-index='8'>
             <div class="x">X</div>
             <div class="o">O</div>
             <div class="hover-x">X</div>
