--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
     <input type="submit" value="Create Game">
   </form>
 
+  <form id="show-game">
+    <input name="game[id]" type="text" placeholder="game id here">
+    <input type="submit" value="Get game">
+  </form>
+
   <div class="container">
 
     <div class="row">
