Create get books index api
Create get books index api. All apis are functioning.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
     <input type="submit" value="Get game">
   </form>
 
+  <form id="get-games">
+    <input type="submit" value="See all games">
+  </form>
+
   <div class="container">
 
     <div class="row">
