--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-2" id="feedback"></div>
+      <div class="col-xs-2" id="feedback">
+          <div class="occupied">PLEASE PICK EMPTY SPACE</div>
+      </div>
       <!-- right column, where feedback lives -->
     </div>
 
