Get 2nd game to display properly
2nd game board is now displaying properly. Hover and click events
show as expected.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="modal-footer">
           <div class="sign-up-error">problem signing up, try again </div>
-          <div class="sign-in-error">problem signing up, try again </div>
+          <div class="sign-in-error">problem signing in, try again </div>
           <button type="button" class="btn btn-primary onward" data-dismiss="modal" id="onward">Onward!</button>
 
         </div>
