Fix new game more
Realized the reason the button wouldn't always show up was because
pasting the ID in there would overwrite it.

Created a new form with a class of create-game since ids are unique,
and attached the same click handler onto it

--- a/index.html
+++ b/index.html
@@ -154,8 +154,11 @@
   <div id="game-state" class="game-container">
 
     <div class="row">
-      <div class="col-xs-2" id="left-feedback"></div>
-      <!-- left column, good place for buttons -->
+      <div class="col-xs-2" id="left-feedback">
+        <p>ahefhasehfashefahsef</p>
+            <input type="submit" value="Start New Game" class="create-game">
+      </div>
+
       <div class="col-xs-8">
         <div class="row top">
           <div class="col-xs-4" id="upLeft" data-cell-index='0'>
