Fix game messages
Game messages are now in unique places and not overriding each other
added options button to game screen to take player back

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 
     <div class="row">
       <div class="col-xs-2" id="left-feedback">
-        <p>ahefhasehfashefahsef</p>
-            <input type="submit" value="Start New Game" class="create-game">
+        <input type="submit" value="Start New Game" class="create-game">
+        <input type="submit" value="Options" class="back-to-options">
       </div>
 
       <div class="col-xs-8">
@@ -181,14 +181,14 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-2" id="feedback">
-          <div class="occupied">PLEASE PICK EMPTY SPACE</div>
-      </div>
+      <div class="col-xs-2" id="feedback"></div>
       <!-- right column, where feedback lives -->
     </div>
 
     <div class="row">
-      <div class="col-xs-2"></div>
+      <div class="col-xs-2">
+  <div class="occupied">PLEASE PICK EMPTY SPACE</div>
+      </div>
       <div class="col-xs-8">
         <div class="row mid">
           <div class="col-xs-4" id="midLeft" data-cell-index='3'>
@@ -213,7 +213,9 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-2"></div>
+      <div class="col-xs-2">
+        <div class="game-over-message"></div>
+      </div>
     </div>
 
     <div class="row">
