Clear forms after sign out
Sign in and sign up forms and messages are now appropriately reset
without the use of page refresh.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                   </div>
                 </div>
               </form>
+              <div class="sign-up-message">
+              Signed up successfully, now please sign in
+            </div>
             </div>
             <div class="col-xs-6">
               <form id="sign-in">
@@ -67,8 +70,12 @@
                   <div class="col-xs-6">
                     <input type="submit" value="Sign In!">
                   </div>
+
                 </div>
               </form>
+              <div class="sign-in-message">
+              Signed in successfully
+            </div>
             </div>
 
           </div>
@@ -114,6 +121,7 @@
       <fieldset>
         <legend> See all games </legend>
         <input type="submit" value="See all games">
+        <div id="games-length"></div>
       </fieldset>
     </form>
 
