--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
 
     <form id="show-game">
       <fieldset>
-        <legend>See game by id#</legend>
+        <legend>Look up a previous game by id#</legend>
         <input name="game[id]" type="text" placeholder="game id here">
-        <input type="submit" value="See game by id#">
+        <input type="submit" value="See game">
       </fieldset>
     </form>
 
     <form id="get-games">
       <fieldset>
-        <legend> See all games </legend>
-        <input type="submit" value="See all games">
+        <legend> See how many games you've played </legend>
+        <input type="submit" value="See number">
         <div id="games-length"></div>
       </fieldset>
     </form>
