--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 </div>
               </form>
               <div class="sign-up-message">
-              Signed up successfully, now please sign in
-            </div>
+                Signed up successfully, now please sign in
+              </div>
             </div>
             <div class="col-xs-6">
               <form id="sign-in">
@@ -74,8 +74,8 @@
                 </div>
               </form>
               <div class="sign-in-message">
-              Signed in successfully
-            </div>
+                Signed in successfully
+              </div>
             </div>
 
           </div>
@@ -121,7 +121,7 @@
     <form id="get-games">
       <fieldset>
         <legend> See how many games you've played </legend>
-        <input type="submit" value="See number">
+        <input type="submit" value="Are you a champion?">
         <div id="x-won"></div>
         <div id="o-won"></div>
         <div id="ties"></div>
@@ -170,7 +170,6 @@
         <input type="submit" value="Start New Game" class="create-game">
         <input type="submit" value="Options" class="back-to-options">
       </div>
-
       <div class="col-xs-8">
         <div class="row top">
           <div class="col-xs-4" id="upLeft" data-cell-index='0'>
@@ -199,7 +198,7 @@
 
     <div class="row">
       <div class="col-xs-2">
-  <div class="occupied">PLEASE PICK EMPTY SPACE</div>
+        <div class="occupied">PLEASE PICK EMPTY SPACE</div>
       </div>
       <div class="col-xs-8">
         <div class="row mid">
@@ -214,8 +213,6 @@
             <div class="o">O</div>
             <div class="hover-x">X</div>
             <div class="hover-o">O</div>
-            <div class="modal"> MODAL GOES HERE </div>
-            <!-- MODAL ON TOP! -->
           </div>
           <div class="col-xs-4" id="midRight" data-cell-index='5'>
             <div class="x">X</div>
@@ -256,7 +253,6 @@
       </div>
       <div class="col-xs-2"></div>
     </div>
-
 
   </div>
 </body>
