Add singular messages for get games
Add singular messages for get games

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
 </head>
 
-<body class="container-fluid">
+<body class="container-fluid border-image">
 
   <div class="intro">
     <h1>Tickity Tackity Toe</h1>
@@ -93,7 +93,7 @@
   <!-- OPTIONS-STATE -->
   <div id="options-state" class="options-state">
 
-    <h1> Options </h1>
+    <h1> Forks in the road... </h1>
     <form id="create-game">
       <fieldset>
         <legend> Start a game. No more stalling </legend>
